fixing some layout bug

--- a/module/Web/Alcarin/static/less/common.less
+++ b/module/Web/Alcarin/static/less/common.less
@@ -1,6 +1,15 @@
+@font-color: rgb(143, 143, 143);
+
 body, html, .container {
     height: 100%;
 }
+
+body {
+  color: lighten( @font-color, 0% );
+  background: rgb(50, 50, 50);
+  background: url('../../img/pattern.gif') repeat top left;
+}
+
 
 h2 {
   font-family: dosissemibold;
