--- a/module/Web/Alcarin/static/less/player-panel.less
+++ b/module/Web/Alcarin/static/less/player-panel.less
@@ -1,7 +1,6 @@
 @import 'core';
 
 @spaces: 8px;
-@font-color: rgb(143, 143, 143);
 //38.2%
 @left-ratio: 38.2%;
 
@@ -12,13 +11,6 @@
     padding: 20px 30px 20px 30px;
     min-height: 560px;
     .rounded-corners;
-}
-
-body {
-  color: lighten( @font-color, 0% );
-  padding: 0;
-  background: rgb(50, 50, 50);
-  background: url('../../img/pattern.gif') repeat top left;
 }
 
 .container {
